# Eternal-Brawl

./: .gitignore  CMakeLists.txt  Eternal-Brawl.sln  Game.code-workspace  LICENSE  Makefile  README.md  animatedGraphic.cpp  animatedGraphic.hpp  collisionManager.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  gameOverState.cpp  gameStateMachine.cpp  gameStateMachine.hpp  inputHandler.cpp  inputHandler.hpp  loaderAssets.cpp  loaderAssets.hpp  loaderParams.cpp  main.cpp  map.hpp  menuButton.cpp  menuState.cpp  menuState.hpp  pauseState.cpp  playState.cpp  playState.hpp  player.cpp  player.hpp  renderWindow.hpp  resourceManager.cpp  resourceManager.hpp  run.ps1  tileLayer.cpp  utils.hpp  (+2 more)
Eternal-Brawl/: ClassDiagram.cd  Eternal-Brawl.filters  Eternal-Brawl.vcxproj  animatedGraphic.cpp  collisionManager.hpp  enemy.cpp  enemy.hpp  entity.hpp  game.cpp  gameOverState.cpp  gameOverState.hpp  gameState.hpp  instructionState.cpp  instructionState.hpp  item.cpp  item.hpp  loaderAssets.cpp  loaderAssets.hpp  loaderParams.cpp  loaderParams.hpp  main.cpp  map.cpp  map.hpp  menuButton.cpp  menuButton.hpp  menuState.cpp  menuState.hpp  pauseState.cpp  pauseState.hpp  playState.cpp  playState.hpp  player.cpp  player.hpp  resourceManager.cpp  resourceManager.hpp  tileLayer.hpp  vector2f.cpp  vector2f.hpp
include/: enemy.hpp  entity.hpp  game.hpp  gameStateMachine.hpp  inputHandler.hpp  items.hpp  loaderAssets.hpp  mainMenuState.hpp  playState.hpp  player.hpp  renderWindow.hpp
installEnvTools/: README.md
src/: entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  (+14 more)
(+2071 files in other folders)
